--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -420,6 +420,13 @@ config VIDEO_LCD_RAYDIUM_RM68200
 	Say Y here if you want to enable support for Raydium RM68200
 	720x1280 DSI video mode panel.
 
+config VIDEO_ST7701S
+	bool "ST7701S SPI+RGB LCD panel support"
+	default n
+	---help---
+	Say Y here if you want to enable support for 3spi+rgb interface
+	st7701s video mode panel.
+
 config VIDEO_LCD_SSD2828
 	bool "SSD2828 bridge chip"
 	default n
